--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -1,5 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
-@import "https://fonts.googleapis.com/css?family=Comfortaa:wght@300;400&family=Ubuntu+Mono:wght@400;700&display=swap";
+@import url("https://fonts.googleapis.com/css?family=Comfortaa:wght@300;400&family=Ubuntu+Mono:wght@400;700&display=swap");
 
 $ubuntu-mono: "Ubuntu Mono", monospace;
 $comfortaa: "Comfortaa", cursive;
