--- a/src/components/DropDown/style.scss
+++ b/src/components/DropDown/style.scss
@@ -9,10 +9,8 @@
   }
 
   .dropdown {
-
     max-width: 10rem;
     position: absolute;
-    //right: -50%;
     transition: all .5s ease;
     padding: .3rem 0;
     background-color: $color-white;
@@ -28,7 +26,7 @@
       overflow: hidden;
     }
 
-    .menu-item-pin:hover, .menu-item-important:hover {
+    .menu-item-pin:hover, .menu-item-important:hover, .menu-item-read:hover {
       background-color: $color-btn-primal;
     }
 
@@ -38,6 +36,13 @@
 
     .menu-item-delete:hover {
       background-color: $color-alert-lighten1;
+    }
+
+    .menu-item-read:before{
+      font-family: "Font Awesome 5 Free";
+      font-weight: 700;
+      content: "\f5da";
+      padding-right: .2rem;
     }
 
     .menu-item-pin:before {
@@ -61,18 +66,15 @@
       padding-right: .2rem;
     }
   }
-
   .dropdown:before {
     content: "";
     position: absolute;
     bottom: 99%;
     border-color: #fff transparent;
     border-style: solid;
-    border-width: 0 .3rem .5rem;
+    border-width: 0 .5rem .5rem;
     filter: drop-shadow(0 -0.1rem 0.05rem rgba(0, 0, 0, 0.07));
     transition: all .5s ease;
   }
-
-
 }
 
